{
    "name": "FieraControls",
    "maps": [
        {
            "name": "SpaceShip",
            "id": "969f25b8-dcc8-41db-8769-6bec7af5d08a",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "PassThrough",
                    "id": "1a4c02af-3a7b-4f07-aea3-fe0f2fd40be4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "ReverseThrust",
                    "type": "PassThrough",
                    "id": "cc1588ae-5f88-4f66-9a19-5f758bdf0a66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "3f712dea-6fd0-493c-a889-44fe8cf09a3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "AddThrust",
                    "type": "PassThrough",
                    "id": "c0e4c495-afa3-49d4-9113-8d2ace442b65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "ActivateInventory",
                    "type": "Button",
                    "id": "bafbfcac-836f-4ccd-ad80-893f32e86a67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29a1dc16-bf3d-430f-8a9a-2e8a7da1f19e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "997a2aba-c20c-4139-98ec-eeb95aa8d8ce",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adcdeae2-d87d-4f2a-ac63-fd73e55d2d4e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b6a742c-cb9e-46dd-9def-7108cba18058",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "5917708e-688d-4ccd-be4d-915d29b9d669",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9e057df7-69a4-45a6-a5bc-b1d91185236f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "edc04c2b-a298-454b-a54b-ffb4615ed6c1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "PS4",
                    "id": "1dc2ce3a-eda7-4075-95d1-d70e8419a5d2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "eeb95188-e906-454a-8df8-19b82f71256c",
                    "path": "<DualShockGamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "02c0e9a5-e664-44b5-a9b0-cecab4624b79",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6619f0ed-36dd-4240-83c3-381127e65ae7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a444655-5bf7-41fc-a242-8b1812e89370",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9401ee22-1880-405a-8fb6-4da6e7b471c4",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InventoryUI",
            "id": "9a2fd44e-f492-4ab6-9de1-153eb307b7a1",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "6063a49f-7893-4825-93fa-949c380efede",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AddFuel",
                    "type": "Button",
                    "id": "37ce9fd8-d8c1-43c5-ad28-6e036140e4d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeaveInventory",
                    "type": "Button",
                    "id": "2e1ad4bc-659b-48db-ab3c-d03e0102838f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "fde30b07-05cd-4952-9f49-b680b9240359",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "df41e36f-a6d0-4e74-9e98-45af2c06cefa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ff11afb3-8a6a-43fc-8571-9382822bc51f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7049aa4e-581f-4bdf-8002-6818fe814bc8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddFuel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51a22b94-7467-46d1-baa1-dcab83574653",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c25bca43-9bc9-4dd3-817e-4f4882a2da53",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}